--- a/css/styles.css
+++ b/css/styles.css
@@ -8,21 +8,42 @@
             background-position: top left; 
         }
         .silex-id-1478370149689-19 {
-            min-height: 69px; 
+            min-height: 47px; 
             top: 0px; 
             left: 0px; 
+            background-color: rgba(255,218,192,1); 
+            opacity: 0.5; 
         }
         .silex-id-1478370149689-18 {
-            min-height: 69px; 
+            min-height: 47px; 
             background-color: transparent; 
             top: 0px; 
             left: 473px; 
             width: 960px; 
         }
         .silex-id-1478370181591-21 {
-            min-height: 70px; 
-            width: 591px; 
-            top: 1px; 
-            left: 162px; 
+            min-height: 52px; 
+            width: 115px; 
+            top: -7px; 
+            left: 393px; 
+        }
+        .silex-id-1478372367390-27 {
+            min-height: 31px; 
+            top: 100px; 
+            left: NaNpx; 
+        }
+        .silex-id-1478372367390-26 {
+            min-height: 31px; 
+            background-color: rgba(25,191,255,1); 
+            top: 0px; 
+            left: 473px; 
+            width: 960px; 
+            opacity: 0.6; 
+        }
+        .silex-id-1478372395630-28 {
+            min-height: 20px; 
+            width: 161px; 
+            top: 2px; 
+            left: 372px; 
         }
     
