--- a/css/styles.css
+++ b/css/styles.css
@@ -22,10 +22,10 @@
             width: 960px; 
         }
         .silex-id-1478370181591-21 {
-            min-height: 52px; 
-            width: 115px; 
+            min-height: 92px; 
+            width: 478px; 
             top: -7px; 
-            left: 393px; 
+            left: 220px; 
         }
         .silex-id-1478372367390-27 {
             min-height: 31px; 
@@ -36,14 +36,52 @@
             min-height: 31px; 
             background-color: rgba(25,191,255,1); 
             top: 0px; 
-            left: 473px; 
-            width: 960px; 
+            left: 46px; 
+            width: 970px; 
             opacity: 0.6; 
         }
         .silex-id-1478372395630-28 {
-            min-height: 20px; 
+            min-height: 23px; 
             width: 161px; 
             top: 2px; 
             left: 372px; 
+        }
+        .silex-id-1478378151101-29 {
+            min-height: 31px; 
+            top: 100px; 
+            left: NaNpx; 
+        }
+        .silex-id-1478378151103-30 {
+            min-height: 31px; 
+            background-color: rgba(25,191,255,1); 
+            top: 0px; 
+            left: 46px; 
+            width: 970px; 
+            opacity: 0.6; 
+        }
+        .silex-id-1478378151104-31 {
+            min-height: 21px; 
+            width: 189px; 
+            top: 3px; 
+            left: 356px; 
+        }
+        .silex-id-1478378317348-32 {
+            min-height: 31px; 
+            top: 100px; 
+            left: NaNpx; 
+        }
+        .silex-id-1478378317351-33 {
+            min-height: 31px; 
+            background-color: rgba(25,191,255,1); 
+            top: 0px; 
+            left: 46px; 
+            width: 970px; 
+            opacity: 0.6; 
+        }
+        .silex-id-1478378317352-34 {
+            min-height: 21px; 
+            width: 189px; 
+            top: 4px; 
+            left: 359px; 
         }
     
