--- a/css/styles.css
+++ b/css/styles.css
@@ -27,61 +27,12 @@
             top: -7px; 
             left: 220px; 
         }
-        .silex-id-1478372367390-27 {
-            min-height: 31px; 
-            top: 100px; 
-            left: NaNpx; 
-        }
-        .silex-id-1478372367390-26 {
-            min-height: 31px; 
-            background-color: rgba(25,191,255,1); 
-            top: 0px; 
-            left: 46px; 
-            width: 970px; 
-            opacity: 0.6; 
-        }
-        .silex-id-1478372395630-28 {
-            min-height: 23px; 
-            width: 161px; 
-            top: 2px; 
-            left: 372px; 
-        }
-        .silex-id-1478378151101-29 {
-            min-height: 31px; 
-            top: 100px; 
-            left: NaNpx; 
-        }
-        .silex-id-1478378151103-30 {
-            min-height: 31px; 
-            background-color: rgba(25,191,255,1); 
-            top: 0px; 
-            left: 46px; 
-            width: 970px; 
-            opacity: 0.6; 
-        }
-        .silex-id-1478378151104-31 {
-            min-height: 21px; 
-            width: 189px; 
-            top: 3px; 
-            left: 356px; 
-        }
-        .silex-id-1478378317348-32 {
-            min-height: 31px; 
-            top: 100px; 
-            left: NaNpx; 
-        }
-        .silex-id-1478378317351-33 {
-            min-height: 31px; 
-            background-color: rgba(25,191,255,1); 
-            top: 0px; 
-            left: 46px; 
-            width: 970px; 
-            opacity: 0.6; 
-        }
-        .silex-id-1478378317352-34 {
-            min-height: 21px; 
-            width: 189px; 
-            top: 4px; 
-            left: 359px; 
+        .silex-id-1478378994068-37 {
+            min-height: 274px; 
+            width: 423px; 
+            top: 136px; 
+            left: 376px; 
+            background-color: transparent; 
+            opacity: 0.5; 
         }
     
